--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Chào bạn tôi là myBot</h1>
+    <form id="messageForm">
+        <input type="text" id="messageInput" placeholder="Nhập tin nhắn...">
+        <button type="submit">Gửi</button>
+    </form>
 </body>
 </html>
