--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <input type="text" id="messageInput" placeholder="Nhập tin nhắn...">
         <button type="submit">Gửi</button>
     </form>
+    <div id="messages">Bạn có bận công việc gì không ?</div>
 </body>
 </html>
